Alignment Fixes

--- a/style.css
+++ b/style.css
@@ -154,6 +154,6 @@ p{
 
 .footer{
 	clear:both;
-	height:50px;
+	height:40px;
 	padding: 0 0 0 18px;
 }
